<resources>
    <string name="app_name">Visuals</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="location">Location</string>
    <string name="destination">Destination</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin_header">Hello! %s</string>
    <string name="admin"><font fgcolor='#0D47A1'>Admin</font></string>
    <string name="don_t_have_an_account_sign_up"><font fgcolor='#1565C0'>Don\'t have an account?</font> <b><font fgcolor='#0D47A1'>Sign Up</font></b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visuals">VISUALS</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="fullname">Fullname</string>
    <string name="already_a_member_login"><font fgcolor='#1565C0'>Already a member?</font> <b><font fgcolor='#0D47A1'>Login</font></b></string>
    <string name="create_naccount">Create Account</string>
    <string name="welcome_to_visuals"><font fgcolor='#1565C0'>Welcome to</font><b><font fgcolor='#1976D2'> VISUALS</font></b></string>
    <string name="voice_integrated_signages_nwith_user_aid_leading_system">Voice Integrated Signages \nWith User Aid Leading System</string>
    <string name="let_s_go">Let\'s Go</string>

    <string name="signin_with_google">Signin with Google</string>
    <string name="google_map_api_key">AIzaSyCq2XRH1mJSY218jMnotCUv7atHwfpWo8k</string>
    <string name="server_client_id">1099201395210-6t9740dtdipp2ff74f79ih9ekmv758hf.apps.googleusercontent.com</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="type_your_password">Type Your Password</string>

    <!-- errors  -->
    <string name="login_error_message">Incorrect email or password. Please try again.</string>
    <string name="please_fill_in_all_required_fields">Please fill in all required fields</string>
    <string name="password_do_not_match">Passwords do not match. Please try again.</string>
    <string name="type_your_email">Type your Email</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="notifications">Notifications</string>
    <string name="no_data_available">No data available!</string>

    <!-- settings -->
    <string name="language_category">Speech Language</string>
    <string name="select_language">Select Language</string>
    <string name="default_language">English</string>
    <string name="category_language">Filipino</string>
    <string name="category_general">General</string>
    <string name="category_import">External Data</string>
    <string name="text_import">Import</string>
    <string name="speech_summary">Choose a language from the options provided, and your selection will be saved automatically. The default language is set to English.</string>
    <string name="csv_import_summary">Import CSV file</string>
    <string name="logout">Logout</string>
    <string name="successfully_uploaded">Successfully Uploaded</string>
    <string name="successfully_exported">Successfully Exported</string>
    <string name="emptyString" />
    <string name="create_your_visuals_account_n_or_log_in">Create your Visuals account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="just_a_sec">Just a sec...</string>
    <string name="load">load</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="account">Account</string>
    <string name="select_a_destination">Select a Destination</string>

    <string name="dialog_title_start_ride">Start a Ride</string>
    <string name="dialog_message_start_ride">Are you ready to start an exciting ride?</string>
    <string name="dialog_positive_button_start_ride">Let\'s go!</string>
    <string name="dialog_negative_button_start_ride">Not now</string>

    <string name="dialog_title_end_ride">End Your Ride</string>
    <string name="dialog_message_end_ride">Are you sure you want to end your ride?</string>
    <string name="start_ride_message"><font fgcolor="#0D47A1">You\'re just one step away from an amazing ride! \n\n<b>Start your journey now</b> \nto receive important <b>Notifications.</b></font></string>
    <string name="dialog_option_finish_ride">Finish ride</string>
    <string name="dialog_option_keep_riding">Keep riding</string>
    <string name="dialog_positive_button_end_ride">Yes, finish it</string>
    <string name="dialog_negative_button_end_ride">No, keep riding</string>

    <string name="no_history">No travel history.</string>
    <string name="unable_to_delete_history_item">Unable to delete history item</string>

    <string name="tts_thank_you_for_riding_with_us">Thank you for riding with us! Have a great day!</string>
    <string name="tts_preparing_your_ride">Preparing your ride. Ride safe!</string>
    <string name="calibrating_distance">Calibrating distance</string>
    <string name="calibrating_speed">Calibrating Speed</string>
    <string name="export_all">Export All</string>
    <string name="import_signs">Import Signs</string>
    <string name="exporting_data_please_wait">Exporting data, please wait...</string>
    <string name="importing_data_please_wait">Importing data, please wait...</string>
    <string name="export">Export</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="car">Car</string>
    <string name="email_verification_mssg">(If you\'re done verifying your account, you can tap the button below.)</string>
    <string name="email_verfication_mssg1">Check your Inbox/Spam Folder for the verification email sent to</string>

    <string-array name="language_entries">
        <item>English</item>
        <item>Tagalog</item>
        <!-- Add more languages as needed -->
    </string-array>

    <string-array name="language_values">
        <item>en</item>
        <item>tl</item>
        <!-- Add more language codes as needed -->
    </string-array>

</resources>