<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/language_category"
        app:isPreferenceVisible="false">
        <ListPreference
            android:title="@string/select_language"
            android:key="language_preference"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="@string/default_language"
            android:summary="@string/speech_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_import">
        <Preference
            android:title="@string/text_import"
            android:key="@string/text_import"
            android:summary="@string/csv_import_summary"/>
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            android:title="@string/logout"
            android:key="logout_preference" />
    </PreferenceCategory>
</PreferenceScreen>
