<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F2F2F2"
    tools:context=".fragments.signup.SignupFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="3:2"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_signup_top" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_naccount"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_xxxxlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/padding_large"
            android:textColor="#707070"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/padding_large"
            android:textColor="#707070"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/phone_number"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/padding_large"
            android:textColor="#707070"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/padding_large"
            android:textColor="#707070"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginTop="@dimen/margin_standard"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/already_a_member_login"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>