<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/create_your_visuals_account_n_or_log_in"
            android:padding="10dp"
            android:fontFamily="@font/sf_bold"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="18dp"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup_google"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:backgroundTint="@color/md_grey_300"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/google_icon"
            android:paddingStart="60dp"
            android:paddingEnd="50dp"
            android:fontFamily="@font/sf_bold"
            android:text="@string/sign_up_with_google"
            android:textColor="@color/md_blue_500"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup_email"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:backgroundTint="@color/md_grey_300"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/ic_email"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:layout_marginTop="@dimen/margin_standard"
            android:fontFamily="@font/sf_bold"
            android:text="@string/sign_up_with_email"
            android:textColor="@color/md_blue_500"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>